project(BOJ)

cmake_minimum_required(VERSION 3.13)

set(CMAKE_CXX_STANDARD 14)

add_executable(1451 1451.cpp)
add_executable(1436 1436.cpp)
add_executable(1373 1373.cpp)
add_executable(1208 1208.cpp)
add_executable(1038 1038.cpp)
add_executable(1405 1405.cpp)
add_executable(1541 1541.cpp)
add_executable(15888 15888.cpp)
add_executable(16953 16953.cpp)
add_executable(13505 13505.cpp)
add_executable(2965 2965.cpp)
add_executable(9471 9471.cpp)
add_executable(10824 10824.cpp)
add_executable(2749 2749.cpp)
add_executable(1072 1072.cpp)
add_executable(2407 2407.cpp)
add_executable(14502 14502.cpp)
add_executable(2231 2231.cpp)
add_executable(1448 1448.cpp)
add_executable(2447 2447.cpp)
add_executable(1991 1991.cpp)
add_executable(10799 10799.cpp)
add_executable(10990 10990.cpp)
add_executable(17359 17359.cpp)
add_executable(15897 15897.cpp)
add_executable(14501 14501.cpp)
add_executable(17353 17353.cpp)
add_executable(17352 17352.cpp)
add_executable(2172 2172.cpp)
add_executable(2211 2211.cpp)
add_executable(10282 10282.cpp)
add_executable(1719 1719.cpp)
add_executable(11657 11657.cpp)
add_executable(2315 2315.cpp)
add_executable(1750 1750.cpp)
add_executable(2098 2098.cpp)
add_executable(1521 1521.cpp)
add_executable(2104 2104.cpp)
add_executable(6549 6549.cpp)
add_executable(1725 1725.cpp)
add_executable(2066 2066.cpp)
add_executable(1013 1013.cpp)
add_executable(1467 1467.cpp)
add_executable(2014 2014.cpp)
add_executable(14488 14488.cpp)
add_executable(4354 4354.cpp)
add_executable(17356 17356.cpp)
add_executable(17349 17349.cpp)
add_executable(15938 15938.cpp)
add_executable(15740 15740.cpp)
add_executable(17351 17351.cpp)